archive/oci/kubernetes/gateway/api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: default
spec:
  parentRefs:
  - name: istio-ingress-gateway
    namespace: istio-ingress
  hostnames:
  - "app.budgetanalyzer.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: nginx-gateway
      port: 8080
