archive/oci/kubernetes/gateway/app-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: default
spec:
  parentRefs:
  - name: istio-ingress-gateway
    namespace: istio-ingress
  hostnames:
  - "app.budgetanalyzer.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api-docs
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Forwarded-Proto
          value: "https"
    backendRefs:
    - name: nginx-gateway
      port: 8080
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Forwarded-Proto
          value: "https"
    backendRefs:
    - name: nginx-gateway
      port: 8080
